Commit Final - Pokedex

--- a/src/app/views/list/list.component.html
+++ b/src/app/views/list/list.component.html
@@ -1,10 +1,11 @@
-<input [(ngModel)]="nameFilter" type="text" id="poke-filter" placeholder="Search" maxlength="20" >
-
-<img [src]="pokemonSprite" class="selected-poke" *ngIf="pokemonSelecionado !== null">
-
+<input [(ngModel)]="nameFilter" type="text" id="poke-filter" placeholder="Search" maxlength="20"/>
 <ul class="poke-list">
     <li class="poke-list-item" *ngFor="let Pokemon of PokemonList" (mouseenter)="selectPokemon(Pokemon)">
         <img class="poke-list-item-img" src="//serebii.net/pokedex-sv/icon/{{ Pokemon.number }}.png" alt="" srcset="">
-        <a>Nº {{ Pokemon.number }} - {{ Pokemon.name}}</a>
+        <a>Nº {{ Pokemon.number }} - {{ Pokemon.name }}</a>
     </li>
 </ul>
+<div id="fundoImagem">
+    <img [src]="pokemonSprite" class="selected-poke" *ngIf="pokemonSelecionado !== null"/>
+    <span id="pokemonNome" *ngIf="pokemonSelecionado !== null">{{ pokemonSelecionado.name.toUpperCase() }}</span>
+</div>
