--- a/src/app/views/list/list.component.css
+++ b/src/app/views/list/list.component.css
@@ -1,14 +1,38 @@
+#fundoImagem {
+  background-image: url("https://e0.pxfuel.com/wallpapers/783/1020/desktop-wallpaper-pokemon-rotom-dex-pokedex-thumbnail.jpg");
+  position: fixed;
+  width: 25.9%;
+  height: 600px; 
+  margin-left: 35%
+}
+
+#pokemonNome {
+  margin-left: 37%;
+  font-weight: bold;
+  font-size: larger;
+}
+
 #poke-filter {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 5;
-  padding: 10px;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: 0;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: #666;
-  color: #fff; 
+  color: white; 
+  width: 97%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+}
+
+#poke-filter::placeholder {
+  color: fffafa; 
 }
   
 #poke-filter:focus{
@@ -16,11 +40,14 @@
 }
   
 .poke-list {
-  float: right;
-  margin-top: 50px;
-  width: 70%;
+  margin: 0;
+  float: left;  
+  width: 30%;
   text-transform: capitalize;
   opacity: 0.95; 
+  padding: 0;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
 }
 
 .poke-list-item {
@@ -29,8 +56,7 @@
   position: relative;
   padding: 10px;
   border: 1px solid black;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-radius: 20px;
   cursor: pointer;
   list-style: none;
   background-color: #333;
@@ -47,8 +73,8 @@
 }
 
 .selected-poke {
-  margin-top: 30px;
-  margin-left: 5px;
-  width: 25%;
+  margin: 35px;
+  margin-top: 150px;
+  width: 80%;
   height: auto;
 }
