--- a/src/app/views/list/list.component.css
+++ b/src/app/views/list/list.component.css
@@ -1,7 +1,22 @@
+#content {
+  width: 68%;
+  margin-left: 31%;
+  height: 420px; 
+}
+
 #fundoImagem {
   width: 26%;
   height: 420px; 
-  margin-left: 35%;
+  margin-left: 6%;
+  border: black 1px solid;
+  border-radius: 20px;
+  position: fixed;
+}
+
+#fundoImagem2 {
+  width: 26%;
+  height: 420px; 
+  margin-left: 36%;
   border: black 1px solid;
   border-radius: 20px;
   position: fixed;
@@ -11,15 +26,6 @@
   margin: 10%;
   width: 80%;
   height: auto;
-}
-
-#pokemonNome {
-  font-weight: bold;
-  font-size: larger;
-  text-align: center;
-  margin: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-bottom: 10px;
 }
 
 #poke-filter {
@@ -64,7 +70,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  padding: 10px;
+  padding: 5px;
   border: 1px solid black;
   border-radius: 20px;
   cursor: pointer;
@@ -80,4 +86,23 @@
 .poke-list-item img{
   margin-right: 10px;
   vertical-align: middle;
+}
+
+.infoPokemonTitle {
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-bottom: 5px;
+  margin-top: 5%;
+}
+
+.infosPokemon {
+  font-weight: bold;
+  font-size: larger;
+  text-align: center;
+  margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-bottom: 10px;
 }
