--- a/src/app/views/list/list.component.css
+++ b/src/app/views/list/list.component.css
@@ -55,7 +55,7 @@
   outline: none;
 }
   
-.poke-list {
+#poke-list {
   margin: 0;
   float: left;  
   width: 30%;
@@ -66,7 +66,7 @@
   padding-right: 0.5%;
 }
 
-.poke-list-item {
+#poke-list-item {
   display: flex;
   align-items: center;
   position: relative;
@@ -79,11 +79,11 @@
   color: white; 
 }
   
-.poke-list-item:hover {
+#poke-list-item:hover {
   background-color: #555; 
 }
 
-.poke-list-item img{
+#poke-list-item img{
   margin-right: 10px;
   vertical-align: middle;
 }
